// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test cases for Perspective details Page should be able to render and switch to list view 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        Perspectives
      </h2>
    </div>
  </div>
  <div
    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main header"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        New Perspective
      </span>
    </button>
    <span
      style="flex-grow: 1;"
    />
    <div
      class="bp3-input-group ui-search-box ExpandingSearchInput--main search   ExpandingSearchInput--light"
      data-name=""
    >
      <span
        class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
        data-icon="thinner-search"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
      <input
        class="bp3-input  ExpandingSearchInput--filter"
        dir="auto"
        placeholder="ce.perspectives.searchPerspectives"
        style="padding-right: 0px;"
        type="search"
        value=""
      />
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-grid-view StyledProps--main"
          icon="grid-view"
        >
          <svg
            data-icon="grid-view"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              grid-view
            </desc>
            <path
              d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-list StyledProps--main"
          icon="list"
        >
          <svg
            data-icon="list"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              list
            </desc>
            <path
              d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxxlarge"
    >
      <div
        class="table"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30%;"
          >
            Name
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            Data Sources
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            Total Cost
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            Time Period
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            Last Edit
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30%;"
            >
              <div
                class="StyledProps--font StyledProps--main nameContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                >
                  name4
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-aws"
                >
                  <svg
                    height="22"
                    viewBox="0 0 14 10"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                      fill="#252f3e"
                    />
                    <g
                      fill="#f90"
                    >
                      <path
                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                      />
                      <path
                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="pipeline-custom"
                >
                  <svg
                    height="22"
                    viewBox="0 0 23 23"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.491 20.516H2.476V4.356h10.231v-.898H1.587v17.956H19.38V10.192h-.89v10.324zm2.66-16.762l-1.887-1.905a.884.884 0 00-1.257 0L6.502 13.457c.039-.039-.26.282-.412.598l-1.94 4.597c-.05.15.032.231.183.181l4.742-1.81c.31-.126.582-.402.573-.392L21.152 5.022a.899.899 0 000-1.268zM5.638 17.344l1.494-3.253 1.888 1.905-3.382 1.348zm4.01-1.982L7.76 13.457l9.172-9.255 1.888 1.905-9.172 9.255zM19.45 5.47l-1.89-1.905 1.075-1.084 1.888 1.905L19.45 5.47z"
                      fill="#F80"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="gcp"
                >
                  <svg
                    height="22"
                    viewBox="0 0 1667 1341"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                    >
                      <path
                        d="M1058.1 369.2h50.8l144.8-144.8 7.1-61.5C991.3-75 580-49.3 342.1 220.2 276 295 228.1 384.1 201.9 480.5c16.1-6.6 34-7.7 50.8-3l289.6-47.8s14.7-24.4 22.4-22.9c128.8-141.5 345.6-158 494.4-37.6h-1z"
                        fill="#EA4335"
                      />
                      <path
                        d="M1460 480.5c-33.3-122.6-101.6-232.8-196.6-317l-203.2 203.2c85.8 70.1 134.7 175.8 132.6 286.6v36.1c99.9 0 180.9 81 180.9 180.9s-81 180.9-180.9 180.9H831l-36.1 36.6v217l36.1 36.1h361.8c259.8 2 472.1-207 474.1-466.8 1.2-157.8-76.5-305.4-206.9-393.6z"
                        fill="#4285F4"
                      />
                      <path
                        d="M468.7 1338.6h361.8V1049H468.7c-25.8 0-51.2-5.6-74.7-16.3l-50.8 15.8-145.8 144.8-12.7 50.8c81.7 61.8 181.5 95 284 94.5z"
                        fill="#34A853"
                      />
                      <path
                        d="M468.7 399.196C208.8 400.7-.5 612.6.992 872.5 1.9 1017.6 69.6 1154.2 184.7 1242.6l209.8-209.8c-91-41.1-131.5-148.3-90.4-239.3 41.1-91 148.3-131.5 239.3-90.4 40.1 18.1 72.2 50.3 90.4 90.4l209.8-209.8c-89.2-116.8-228-185.1-374.9-184.504z"
                        fill="#FBBC05"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              >
                $195.79
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ce.perspectives.timeRangeConstants.last30Days
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              July 13, 2021 8:30 AM
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30%;"
            >
              <div
                class="StyledProps--font StyledProps--main nameContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                >
                  name3
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              />
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              >
                $290,426.14
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ce.perspectives.timeRangeConstants.lastMonth
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              July 13, 2021 8:30 AM
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30%;"
            >
              <div
                class="StyledProps--font StyledProps--main nameContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                >
                  name2
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="blue-black-cluster"
                >
                  <svg
                    height="22"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <defs>
                      <radialgradient
                        cx="50%"
                        cy="50%"
                        fx="50%"
                        fy="50%"
                        gradientTransform="matrix(0 -1 .91882 0 .04 1)"
                        id="blue-black-cluster_svg__a"
                        r="100%"
                      >
                        <stop
                          offset="0%"
                          stop-color="#28ACFF"
                        />
                        <stop
                          offset="100%"
                          stop-color="#289FEA"
                        />
                      </radialgradient>
                    </defs>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M16.732 9.378l3.987 2.114v4.152l-3.987 2.115-3.986-2.115v-4.152l3.986-2.114zm4.764 7.754l3.987 2.114v4.152l-3.987 2.115-3.986-2.115v-4.152l3.986-2.114zm-10.017-.103l3.987 2.115v4.151l-3.987 2.115-3.987-2.115v-4.151l3.987-2.115zm15.377-7.651l3.987 2.114v4.152l-3.987 2.115-3.987-2.115v-4.152l3.987-2.114z"
                        stroke="#4B4B4B"
                        stroke-width="1.102"
                      />
                      <path
                        d="M5.609 7.754l4.537 2.407v4.814L5.61 17.382l-4.54-2.407v-4.814z"
                        fill="url(#blue-black-cluster_svg__a)"
                        transform="translate(1 1)"
                      />
                      <path
                        d="M22.092 1.624l3.987 2.114V7.89l-3.987 2.115-3.987-2.115V3.738l3.987-2.114zm-10.124 0l3.987 2.114V7.89l-3.987 2.115L7.982 7.89V3.738l3.986-2.114z"
                        stroke="#4B4B4B"
                        stroke-width="1.102"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              >
                $0.00
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ce.perspectives.timeRangeConstants.last7Days
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              July 13, 2021 8:30 AM
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30%;"
            >
              <div
                class="StyledProps--font StyledProps--main nameContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                >
                  name1
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              />
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              >
                $62,736.23
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ce.perspectives.timeRangeConstants.last7Days
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 15%;"
            >
              July 13, 2021 8:30 AM
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test cases for Perspective details Page should be able to render the details page 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        Perspectives
      </h2>
    </div>
  </div>
  <div
    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main header"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        New Perspective
      </span>
    </button>
    <span
      style="flex-grow: 1;"
    />
    <div
      class="bp3-input-group ui-search-box ExpandingSearchInput--main search   ExpandingSearchInput--light"
      data-name=""
    >
      <span
        class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
        data-icon="thinner-search"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
      <input
        class="bp3-input  ExpandingSearchInput--filter"
        dir="auto"
        placeholder="ce.perspectives.searchPerspectives"
        style="padding-right: 0px;"
        type="search"
        value=""
      />
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-grid-view StyledProps--main"
          icon="grid-view"
        >
          <svg
            data-icon="grid-view"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              grid-view
            </desc>
            <path
              d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-list StyledProps--main"
          icon="list"
        >
          <svg
            data-icon="list"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              list
            </desc>
            <path
              d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxxlarge"
    >
      <div
        class="StyledProps--font StyledProps--main mainGridContainer"
      >
        <div
          class="bp3-card bp3-interactive bp3-elevation-0 Card--card cardClass Card--interactive"
          tabindex="0"
        >
          <div
            class="Card--cardMenu"
          >
            <div
              class="Card--dots"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps--main"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main cardContent"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 23px;"
            />
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              style="--text-line-clamp: 2;"
            >
              name4
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
            >
              $195.79
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400"
            >
              ce.perspectives.timeRangeConstants.last30Days
            </p>
            <span
              style="flex-grow: 1;"
            />
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--margin-bottom-small"
              >
                Data Sources
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-aws"
                >
                  <svg
                    height="22"
                    viewBox="0 0 14 10"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                      fill="#252f3e"
                    />
                    <g
                      fill="#f90"
                    >
                      <path
                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                      />
                      <path
                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="pipeline-custom"
                >
                  <svg
                    height="22"
                    viewBox="0 0 23 23"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.491 20.516H2.476V4.356h10.231v-.898H1.587v17.956H19.38V10.192h-.89v10.324zm2.66-16.762l-1.887-1.905a.884.884 0 00-1.257 0L6.502 13.457c.039-.039-.26.282-.412.598l-1.94 4.597c-.05.15.032.231.183.181l4.742-1.81c.31-.126.582-.402.573-.392L21.152 5.022a.899.899 0 000-1.268zM5.638 17.344l1.494-3.253 1.888 1.905-3.382 1.348zm4.01-1.982L7.76 13.457l9.172-9.255 1.888 1.905-9.172 9.255zM19.45 5.47l-1.89-1.905 1.075-1.084 1.888 1.905L19.45 5.47z"
                      fill="#F80"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="gcp"
                >
                  <svg
                    height="22"
                    viewBox="0 0 1667 1341"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                    >
                      <path
                        d="M1058.1 369.2h50.8l144.8-144.8 7.1-61.5C991.3-75 580-49.3 342.1 220.2 276 295 228.1 384.1 201.9 480.5c16.1-6.6 34-7.7 50.8-3l289.6-47.8s14.7-24.4 22.4-22.9c128.8-141.5 345.6-158 494.4-37.6h-1z"
                        fill="#EA4335"
                      />
                      <path
                        d="M1460 480.5c-33.3-122.6-101.6-232.8-196.6-317l-203.2 203.2c85.8 70.1 134.7 175.8 132.6 286.6v36.1c99.9 0 180.9 81 180.9 180.9s-81 180.9-180.9 180.9H831l-36.1 36.6v217l36.1 36.1h361.8c259.8 2 472.1-207 474.1-466.8 1.2-157.8-76.5-305.4-206.9-393.6z"
                        fill="#4285F4"
                      />
                      <path
                        d="M468.7 1338.6h361.8V1049H468.7c-25.8 0-51.2-5.6-74.7-16.3l-50.8 15.8-145.8 144.8-12.7 50.8c81.7 61.8 181.5 95 284 94.5z"
                        fill="#34A853"
                      />
                      <path
                        d="M468.7 399.196C208.8 400.7-.5 612.6.992 872.5 1.9 1017.6 69.6 1154.2 184.7 1242.6l209.8-209.8c-91-41.1-131.5-148.3-90.4-239.3 41.1-91 148.3-131.5 239.3-90.4 40.1 18.1 72.2 50.3 90.4 90.4l209.8-209.8c-89.2-116.8-228-185.1-374.9-184.504z"
                        fill="#FBBC05"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-card bp3-interactive bp3-elevation-0 Card--card cardClass Card--interactive"
          tabindex="0"
        >
          <div
            class="Card--cardMenu"
          >
            <div
              class="Card--dots"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps--main"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main cardContent"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 23px;"
            />
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              style="--text-line-clamp: 2;"
            >
              name3
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
            >
              $290,426.14
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400"
            >
              ce.perspectives.timeRangeConstants.lastMonth
            </p>
            <span
              style="flex-grow: 1;"
            />
          </div>
        </div>
        <div
          class="bp3-card bp3-interactive bp3-elevation-0 Card--card cardClass Card--interactive"
          tabindex="0"
        >
          <div
            class="Card--cardMenu"
          >
            <div
              class="Card--dots"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps--main"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main cardContent"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 23px;"
            />
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              style="--text-line-clamp: 2;"
            >
              name2
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
            >
              $0.00
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400"
            >
              ce.perspectives.timeRangeConstants.last7Days
            </p>
            <span
              style="flex-grow: 1;"
            />
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--margin-bottom-small"
              >
                Data Sources
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="blue-black-cluster"
                >
                  <svg
                    height="22"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <defs>
                      <radialgradient
                        cx="50%"
                        cy="50%"
                        fx="50%"
                        fy="50%"
                        gradientTransform="matrix(0 -1 .91882 0 .04 1)"
                        id="blue-black-cluster_svg__a"
                        r="100%"
                      >
                        <stop
                          offset="0%"
                          stop-color="#28ACFF"
                        />
                        <stop
                          offset="100%"
                          stop-color="#289FEA"
                        />
                      </radialgradient>
                    </defs>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M16.732 9.378l3.987 2.114v4.152l-3.987 2.115-3.986-2.115v-4.152l3.986-2.114zm4.764 7.754l3.987 2.114v4.152l-3.987 2.115-3.986-2.115v-4.152l3.986-2.114zm-10.017-.103l3.987 2.115v4.151l-3.987 2.115-3.987-2.115v-4.151l3.987-2.115zm15.377-7.651l3.987 2.114v4.152l-3.987 2.115-3.987-2.115v-4.152l3.987-2.114z"
                        stroke="#4B4B4B"
                        stroke-width="1.102"
                      />
                      <path
                        d="M5.609 7.754l4.537 2.407v4.814L5.61 17.382l-4.54-2.407v-4.814z"
                        fill="url(#blue-black-cluster_svg__a)"
                        transform="translate(1 1)"
                      />
                      <path
                        d="M22.092 1.624l3.987 2.114V7.89l-3.987 2.115-3.987-2.115V3.738l3.987-2.114zm-10.124 0l3.987 2.114V7.89l-3.987 2.115L7.982 7.89V3.738l3.986-2.114z"
                        stroke="#4B4B4B"
                        stroke-width="1.102"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-card bp3-interactive bp3-elevation-0 Card--card cardClass Card--interactive"
          tabindex="0"
        >
          <div
            class="Card--cardMenu"
          >
            <div
              class="Card--dots"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps--main"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main cardContent"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 23px;"
            />
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              style="--text-line-clamp: 2;"
            >
              name1
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
            >
              $62,736.23
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400"
            >
              ce.perspectives.timeRangeConstants.last7Days
            </p>
            <span
              style="flex-grow: 1;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
